Changed title to be a required field

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -25,7 +25,7 @@
    
   </div>
   <div class="col bg-light">
-    <h1><%= name + ' ' + lastName %> </h1>
+    <h1><%= title %> </h1>
     <p><%= description  %> </p>
   </div>
 </div>
